# recfive

./: .gitignore  .taurignore  Cargo.toml  Trunk.toml  index.html  styles.css
.github/workflows/: ci-build.yml  ci-check.yml  ci.yml  tailwind-build.yml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/archieve/: gz.rs  mod.rs  rar.rs  sevenz.rs  tar.rs  tgz.rs  txz.rs  zip.rs
src/app/: home.rs  mod.rs  welcome.rs
